# RIOT-rs

./: .drone.yml  .editorconfig  .gitattributes  .gitignore  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Justfile  LICENSE-MIT  README.md  _typos.toml  ariel-os-cargo.toml  clippy.toml  committed.toml  criticalup.toml  deny.toml  index.html  laze-project.yml  linkme.x  memory.x  patch.crates-io.toml  rust-toolchain  rust-toolchain.toml
.cargo/: config  config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  feature-request.yml
.github/workflows/: book.yml  build-deploy-docs.yml  build.yml  dependencies-action.yml  git.yml  hax.yml  issue-metrics.yml  main.yml  matrix-bot.yml  rustdoc.yml
app/: Cargo.toml
app/src/: main.rs
boards/: Cargo.toml
boards/lm3s6965evb/: memory.x
boards/nrf52/: Cargo.toml
boards/nrf52/src/: lib.rs
boards/nrf52840dk/: Cargo.toml
boards/nrf52840dk/src/: lib.rs
boards/nucleo-f401re/: Cargo.toml
boards/nucleo-f401re/src/: lib.rs
boards/src/: lib.rs
book/: book.toml
book/src/: COC_reporting.md  CODE_OF_CONDUCT.md  SUMMARY.md  application.md  coding-conventions.md  glossary.md  hardware_functionality_support.md  introduction.md  manifesto.md  multithreading.md  support_matrix.html
chips/: Cargo.toml
chips/nrf52840/: Cargo.toml
chips/stm32f4xx/: Cargo.toml  build.rs
dev/: 404.html  COC_reporting.html  CODE_OF_CONDUCT.html  appendices.html  coding-conventions.html  index.html  introduction.html  manifesto.html  print.html  searchindex.js  searchindex.json
doc/: add_board_support.md  build_system.md  code_overview.md  gen_support_matrix_html.rs  startup.md  support_matrix.yml
env/: common.env  lm3s6965evb.env  nrf52840dk.env  thumbv7em-none-eabi.env
examples/: README.md  laze.yml
examples/application/: Cargo.toml  README.md  laze.yml
examples/application/src/: main.rs
examples/benchmark/: Cargo.toml  README.md  laze.yml
examples/benchmark/src/: main.rs
examples/blink/: Cargo.toml  README.md  laze.yml
examples/blinky/: Cargo.toml  README.md  laze.yml
examples/blinky/src/: main.rs  pins.rs
examples/bottles/: Cargo.toml  README.md  build.sh  env  laze.yml
examples/bottles/src/: main.rs
examples/coap/: Cargo.toml  Embed.toml  README.md  client.diag  fauxhoc.py  laze.yml
examples/coap-client/: Cargo.toml  README.md  laze.yml  server.py
examples/coap-client/src/: main.rs
examples/coap-server/: Cargo.toml  README.md  client.cosekey  client.diag  laze.yml
examples/coap-server/src/: main.rs
examples/coap/src/: main.rs  oluru.rs  seccontext.rs
examples/coap/src/udp_nal/: mod.rs  util.rs
examples/core-sizes/: Cargo.toml  README.md  laze.yml
examples/core-sizes/src/: main.rs
examples/device-metadata/: Cargo.toml  README.md  laze.yml
examples/embassy/: Cargo.toml  README.md  laze.yml
examples/embassy-http-server/: Cargo.toml  README.md  hw-config.yml  laze.yml
examples/embassy-http-server/src/: main.rs  pins.rs  sensors.rs
examples/embassy-http-server/src/routes/: buttons.rs  index.rs  mod.rs  sensors.rs  temp.rs
examples/embassy-http-server/static/: index.html
examples/embassy-net/: Cargo.toml  README.md  laze.yml
examples/embassy-net-tcp/: Cargo.toml  README.md  laze.yml
examples/embassy-net-tcp/src/: main.rs
examples/embassy-net-udp/: Cargo.toml  README.md  laze.yml
examples/embassy-net-udp/src/: main.rs
examples/embassy-net/src/: main.rs
examples/embassy-usb-keyboard/: Cargo.toml  README.md  laze.yml
examples/embassy-usb-keyboard/src/: main.rs  pins.rs
examples/embassy/src/: main.rs
examples/gpio/: Cargo.toml  README.md  laze.yml
examples/gpio/src/: main.rs  pins.rs
examples/hello-world/: Cargo.toml  README.md  build.sh  laze.yml  out  out2
examples/hello-world-async/: Cargo.toml  laze.yml
examples/hello-world-async/src/: main.rs
examples/hello-world-threading/: Cargo.toml  README.md  laze.yml
examples/hello-world/src/: main.rs
examples/http-client/: Cargo.toml  README.md  laze.yml
examples/http-client/src/: main.rs
examples/http-server/: Cargo.toml  README.md  laze.yml
examples/http-server/src/: main.rs  pins.rs  routes.rs
examples/http-server/static/: index.html
examples/random/: Cargo.toml  README.md  laze.yml
examples/random/src/: main.rs
examples/riot-app/: Cargo.toml  README.md  laze.yml
examples/riot-app/src/: main.rs
examples/rust-gcoap/: Cargo.toml  README.md  laze.yml
examples/rust-gcoap/rust-gcoap-vfs/: vfs.c
examples/rust-gcoap/src/: main.rs
riot-app/: Cargo.toml  build_app.sh
riot-app/src/: main.rs
riot-build/: Cargo.toml  Makefile.riotbuild-rs  build.rs
riot-build/src/: lib.rs
riot-rs-core/: Cargo.toml  build.rs  build.rsx  cbindgen.toml  openocd.gdb
riot-rs-core/examples/: bench_lock.rs  bench_sched_nop.rs  bench_sched_yield_pingping.rs  closure_thread.rs  systick_send_msg.rs  systick_sleep_wakeup.rs
riot-rs-core/examples.x/: closure_thread.rs
riot-rs-core/include/: kernel_types.h  mbox.h  msg.h  msg_content.h  mutex.h  sched.h  thread.h  thread_flags.h
riot-rs-core/src/: channel.rs  event_group.rs  lib.rs  lock.rs  runqueue.rs  startup.rs  thread.rs
riot-rs-core/tests/: basic.rs  highreg_save_restore.rs  runqueue.rs
riot-rs-rt/: Cargo.toml
riot-rs-rt/examples/: bench_clist.rs  bench_sched_nop.rs  bench_sched_yield_pingping.rs  clist_bench2.rs  closure_thread.rs  systick_send_msg.rs
riot-rs-rt/src/: init.rs  lib.rs  testing.rs
riot-rs-rt/tests/: basic.rs
riot_core/: Cargo.toml
riot_core/examples/: bench_clist.rs  bench_lock.rs  bench_sched_nop.rs  bench_sched_yield_pingping.rs  clist_bench2.rs  closure_thread.rs  systick_send_msg.rs  systick_sleep_wakeup.rs
riot_core/src/: console.rs  init.rs  lib.rs  thread.rs
riot_core/tests/: basic.rs  highreg_save_restore.rs  runqueue.rs
scripts/: debug-openocd.sh  debug.sh  openocd.gdb  provisioning-processor  runner-riotboot.sh  rust-toolchain.sh
src/: laze.yml  lib.rs  runqueue.rs
testing/: Cargo.toml
testing/src/: lib.rs
tests/: README.md  laze.yml
(+743 files in other folders)
