[workspace]
members = [
  "examples/*",
  "src/lib/clist",
  "src/lib/rbi",
  "src/lib/ringbuffer",
  "src/lib/coapcore",
  "src/riot-rs",
  "src/riot-rs-bench",
  "src/riot-rs-boards",
  "src/riot-rs-boards/nrf52",
  "src/riot-rs-boards/nrf52840dk",
  "src/riot-rs-chips",
  "src/riot-rs-debug",
  "src/riot-rs-embassy-common",
  "src/riot-rs-esp",
  "src/riot-rs-macros",
  "src/riot-rs-nrf",
  "src/riot-rs-random",
  "src/riot-rs-rp",
  "src/riot-rs-stm32",
  "tests/benchmarks/bench_sched_yield",
  "tests/gpio",
  "tests/gpio-interrupt-nrf",
  "tests/gpio-interrupt-stm32",
  "tests/threading-lock",
]

exclude = ["src/lib"]

default-members = ["examples/hello-world"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/future-proof-iot/riot-rs"

[workspace.dependencies]
cfg-if = { version = "1.0.0" }
cortex-m = { version = "0.7", default-features = false, features = [
  "inline-asm",
] }
cortex-m-rt = { version = "=0.7.3" }
cortex-m-semihosting = { version = "0.5" }
critical-section = { version = "1.1.2" }
# Disabling default features may reduce the code size by not providing atomics
# for types larger than the pointer width, which we do not use.
portable-atomic = { version = "1.6.0", default-features = false, features = [
  "require-cas",
] }

embassy-executor = { version = "0.6", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }
embassy-hal-internal = { version = "0.2.0", default-features = false }
embassy-net = { version = "0.4", default-features = false }
embassy-net-driver-channel = { version = "0.3.0", default-features = false }
embassy-nrf = { version = "0.2", default-features = false }
embassy-rp = { version = "0.2", default-features = false }
embassy-stm32 = { version = "0.1", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embassy-time = { version = "0.3", default-features = false }
embassy-usb = { version = "0.3", default-features = false }

embedded-hal = { version = "1.0.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }

esp-hal = { git = "https://github.com/kaspar030/esp-hal", branch = "for-riot-rs-2024-08-30", default-features = false }
esp-hal-embassy = { git = "https://github.com/kaspar030/esp-hal", branch = "for-riot-rs-2024-08-30", default-features = false }
esp-println = "0.11.0"
esp-wifi = { git = "https://github.com/kaspar030/esp-hal", branch = "for-riot-rs-2024-08-30", default-features = false }

linkme = { version = "0.3.21", features = ["used_linker"] }

riot-rs = { path = "src/riot-rs", default-features = false }
riot-rs-bench = { path = "src/riot-rs-bench", default-features = false }
riot-rs-boards = { path = "src/riot-rs-boards", default-features = false }
riot-rs-debug = { path = "src/riot-rs-debug", default-features = false }
riot-rs-embassy = { path = "src/riot-rs-embassy", default-features = false }
riot-rs-embassy-common = { path = "src/riot-rs-embassy-common" }
riot-rs-random = { path = "src/riot-rs-random" }
riot-rs-rt = { path = "src/riot-rs-rt" }
riot-rs-runqueue = { path = "src/riot-rs-runqueue" }
riot-rs-stm32 = { path = "src/riot-rs-stm32" }
riot-rs-utils = { path = "src/riot-rs-utils", default-features = false }

const_panic = { version = "0.2.8", default-features = false }
defmt = { version = "0.3.7" }
document-features = "0.2.8"
heapless = { version = "0.8.0", default-features = false }
konst = { version = "0.3.8", default-features = false }
ld-memory = { version = "0.2.9" }
once_cell = { version = "1.19.0", default-features = false, features = [
  "critical-section",
] }
paste = { version = "1.0" }
static_cell = { version = "2.0.0", features = ["nightly"] }

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false
opt-level = "s"     # Optimize for size even in debug builds

[profile.release]
incremental = false
codegen-units = 1
debug = true        # Required for defmt
lto = false
opt-level = "s"

[profile.release.package.esp-wifi]
opt-level = 3

[patch.crates-io]
# riot-rs embassy fork
embassy-executor = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-hal-internal = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-nrf = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-net = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-rp = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-net-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-net-driver-channel = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-stm32 = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-sync = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-time-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-time-queue-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
embassy-usb-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
cyw43 = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }
cyw43-pio = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-08-18" }

# version 0.12-to-be
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp.git", rev = "125773e282bc2e0c914a49e9c75573926e26e558" }

[workspace.lints.rust]
# rustc lints are documented here: https://doc.rust-lang.org/rustc/lints/listing/index.html
private_interfaces = "deny"
private_bounds = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"
# ... until we figure out a way to generate a list of all used cfg variables
# across build configurations ...
unexpected_cfgs = "allow"

[workspace.lints.clippy]
# Clippy lints are documented here: https://rust-lang.github.io/rust-clippy/master/index.html
indexing_slicing = "deny"
missing_safety_doc = { level = "warn" }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
