[package]
name = "riot-rs-core"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

links = "riot-rs-core"

[dependencies]
cortex-m = { version = "0.6.*", features = [ "inline-asm" ] }
cortex-m-rt = "0.6.*"

bitflags = "1.2.*"
cfg-if = "1.0.0"
ref-cast = "1.0"

clist = { path = "../../clist" }

# select one one of these to get a suitable println for debugging
riot-rs-rt = { optional = true, path = "../riot-rs-rt" }
cortex-m-semihosting = { version = "0.3.5" }

[build-dependencies]
cbindgen = "0.15.*"

[dev-dependencies]
riot-rs-rt = { path = "../riot-rs-rt" }
boards = { path = "../boards" }
