[package]
name = "riot_core"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.*", features = [ "inline-asm" ] }
cortex-m-rt = "0.6.*"

#panic-semihosting = { version = "*", features = [ "inline-asm" ] }
panic-abort = "*"
panic-halt = "*"

testing = { path = "../testing" }
clist = { path = "../../clist" }

[dependencies.cortex-m-semihosting]
git = "https://github.com/rust-embedded/cortex-m-semihosting"
rev = "442fb8834128a60ebe54cc64063cbd6b2dfa6f92"
