[package]
name = "riot_core"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.*", features = [ "inline-asm" ] }
cortex-m-rt = "0.6.*"

#panic-semihosting = { version = "*", features = [ "inline-asm" ] }
#panic-abort = "*"
#panic-halt = "*"

linkme = "0.2.2"

testing = { path = "../testing" }
clist = { path = "../../clist" }

boards = { path = "../boards" }
