[package]
name = "testing"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cortex-m-semihosting]
git = "https://github.com/rust-embedded/cortex-m-semihosting"
rev = "442fb8834128a60ebe54cc64063cbd6b2dfa6f92"
