[package]
name = "benchmark"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license.workspace = true
edition = "2021"

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["bench"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
