[package]
name = "bottles"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riot-rs-rt = { path = "../../riot-rs-rt" }
riot-rs-core = { path = "../../riot-rs-core" }
riot-build = { path = "../../riot-build", features = ["riot-rs-core"] }

boards = { path = "../../boards" }

riot-sys = { version = "0.3.2", features = ["riot-build" ]}
riot-wrappers = { version = "0.5.1", default-features = false }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
