[package]
name = "bottles"
version = "0.1.0"
authors = [ "Christian M. Amsüss <ca@etonomy.org>", "Kaspar Schleiser <kaspar@schleiser.de>" ]
license = "LGPLv2.1"

edition = "2021"

[dependencies]
riot-rs = { path = "../../src/riot-rs" }
riot-rs-boards = { path = "../../src/riot-rs-boards" }

riot-sys = { version = "0.7.2", features = ["riot-rs" ] }
riot-wrappers = { version = "0.7.17", default-features = false, features = ["with_riot_rs"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
