[package]
name = "coap-server"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
heapless = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = [
  "override-network-config",
  "coap",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
coap-message = "0.3.2"
coap-message-demos = { version = "0.4.0", default-features = false }
coap-handler = "0.2.0"
coap-handler-implementations = "0.5.0"

static-alloc = { version = "0.2.5", features = ["polyfill"] }
