[package]
name = "coap"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-executor = { workspace = true, default-features = false }
embassy-net = { workspace = true, features = ["udp"] }
embassy-time = { workspace = true, default-features = false }
heapless = { workspace = true }
riot-rs = { path = "../../src/riot-rs", features = [
  "override-network-config",
  "coap",
  # to be removed later once coap pulls them in
  "random",
  "csprng",
] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }

coapcore.path = "../../src/lib/coapcore/"

embedded-nal-coap = "0.1.0-alpha.2"
coap-request = "0.2.0-alpha.2"
coap-message = "0.3.2"
coap-message-demos = { version = "0.4.0", default-features = false }
coap-request-implementations = "0.1.0-alpha.4"
coap-handler = "0.2.0"
coap-handler-implementations = "0.5.0"

static-alloc = "0.2.5"
coap-scroll-ring-server = "0.2.0"
scroll-ring = "0.1.1"
