[package]
name = "core-sizes"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license.workspace = true
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
riot-rs = { path = "../../src/riot-rs", features = ["threading"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
