[package]
name = "embassy-http-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
embassy-executor = { workspace = true, default-features = false }
embassy-net = { workspace = true, features = ["tcp"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, default-features = false }
embedded-io-async = "0.6.0"
heapless = { workspace = true }
httparse = { version = "1.8.0", default-features = false }
picoserve = { version = "0.8.0", default-features = false, features = ["embassy"] }
riot-rs = { path = "../../src/riot-rs", features = ["time", "override-network-config"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
serde = { version = "1.0", default-features = false }
static_cell = { workspace = true }

embassy-nrf = { workspace = true, optional = true }

[features]
button-readings = ["dep:embassy-nrf"]
