[package]
name = "embassy-http-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-net = { workspace = true, features = ["tcp"] }
embassy-sync = { workspace = true }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
heapless = { workspace = true }
httparse = { version = "1.8.0", default-features = false }
picoserve = { version = "0.12.0", default-features = false, features = [
  "embassy",
], git = "https://github.com/ariel-os/picoserve", branch = "bump-embassy-net-0.5.0" }
ariel-os = { path = "../../src/ariel-os", features = [
  "override-network-config",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
serde = { version = "1.0", default-features = false }
static_cell = { workspace = true }

embassy-nrf = { workspace = true, optional = true }

[target.'cfg(capability = "hw/usb-device-port")'.dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["override-usb-config"] }

[features]
button-readings = ["dep:embassy-nrf"]
