[package]
name = "embassy-net-tcp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { path = "../../src/riot-rs", features = [ "time" ] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
embassy-executor = { workspace = true, default-features = false }
embassy-time = { workspace = true, default-features = false }
embassy-net = { workspace = true, features = ["tcp" ] }
embedded-io-async = "0.6.1"
