[package]
name = "embassy-net-udp"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-net = { workspace = true, features = ["udp"] }
embedded-io-async = "0.6.1"
heapless = { workspace = true }
riot-rs = { path = "../../src/riot-rs", features = ["override-network-config"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
